--- a/public/styles.css
+++ b/public/styles.css
@@ -541,6 +541,10 @@ video {
   right: 0px;
 }
 
+.-bottom-6{
+  bottom: -1.5rem;
+}
+
 .-left-6{
   left: -1.5rem;
 }
@@ -553,25 +557,16 @@ video {
   top: -1.5rem;
 }
 
-.top-0{
-  top: 0px;
-}
-
-.-bottom-6{
-  bottom: -1.5rem;
-}
-
 .bottom-0{
   bottom: 0px;
 }
 
-.z-50{
-  z-index: 50;
+.top-0{
+  top: 0px;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.z-50{
+  z-index: 50;
 }
 
 .my-10{
@@ -579,32 +574,14 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-5{
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
 .my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .flex{
@@ -623,22 +600,6 @@ video {
   height: 10rem;
 }
 
-.w-32{
-  width: 8rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
-.flex-initial{
-  flex: 0 1 auto;
-}
-
-.flex-auto{
-  flex: 1 1 auto;
-}
-
 @keyframes pulse{
   50%{
     opacity: .5;
@@ -651,14 +612,6 @@ video {
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .items-center{
@@ -689,21 +642,9 @@ video {
   border-radius: 0.75rem;
 }
 
-.border{
-  border-width: 1px;
-}
-
-.border-2{
-  border-width: 2px;
-}
-
 .border-y-2{
   border-top-width: 2px;
   border-bottom-width: 2px;
-}
-
-.border-b{
-  border-bottom-width: 1px;
 }
 
 .border-b-2{
@@ -714,39 +655,19 @@ video {
   border-top-width: 2px;
 }
 
-.border-gray-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-
-.border-b-gray-400{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-
-.bg-gray-100{
+.bg-neutral-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .bg-pink-100{
   --tw-bg-opacity: 1;
   background-color: rgb(252 231 243 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-red-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -765,36 +686,22 @@ video {
   padding: 0.5rem;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-6{
   padding: 1.5rem;
 }
 
-.p-3{
-  padding: 0.75rem;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.pb-3{
-  padding-bottom: 0.75rem;
 }
 
 .pt-10{
@@ -817,20 +724,8 @@ video {
   font-family: Indie Flower;
 }
 
-.font-serif{
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-.font-kaushan{
-  font-family: Kaushan Script;
-}
-
 .font-merrie{
   font-family: Merriweather;
-}
-
-.font-mono{
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-3xl{
@@ -843,19 +738,14 @@ video {
   line-height: 1;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -867,27 +757,13 @@ video {
   font-weight: 700;
 }
 
-.font-medium{
-  font-weight: 500;
-}
-
-.font-black{
-  font-weight: 900;
+.font-semibold{
+  font-weight: 600;
 }
 
 .text-blue-300{
   --tw-text-opacity: 1;
   color: rgb(147 197 253 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-red-600{
@@ -901,12 +777,6 @@ video {
 
 .opacity-50{
   opacity: 0.5;
-}
-
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg{
@@ -933,42 +803,22 @@ video {
   transition-duration: 300ms;
 }
 
-.duration-500{
-  transition-duration: 500ms;
-}
-
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:bg-gray-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+a{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+a:hover{
+  font-weight: 700;
 }
 
-.hover\:bg-gray-200:hover{
+.hover\:bg-neutral-200:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-green-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-neutral-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover{
@@ -995,18 +845,30 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-@media (min-width: 768px){
-  .md\:grid-cols-3{
+@media (min-width: 1024px){
+  .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:border-x-2{
+  .lg\:border-x-2{
     border-left-width: 2px;
     border-right-width: 2px;
   }
 
-  .md\:border-y-0{
+  .lg\:border-y-0{
     border-top-width: 0px;
     border-bottom-width: 0px;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:mx-32{
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+
+  .xl\:my-36{
+    margin-top: 9rem;
+    margin-bottom: 9rem;
   }
 }
