--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+a {
+    @apply text-blue-500 hover:font-bold
+}
