--- a/public/styles.css
+++ b/public/styles.css
@@ -845,7 +845,23 @@ a:hover{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+@media (min-width: 640px){
+  .sm\:h-52{
+    height: 13rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:h-64{
+    height: 16rem;
+  }
+}
+
 @media (min-width: 1024px){
+  .lg\:h-72{
+    height: 18rem;
+  }
+
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -862,13 +878,13 @@ a:hover{
 }
 
 @media (min-width: 1280px){
-  .xl\:mx-32{
-    margin-left: 8rem;
-    margin-right: 8rem;
+  .xl\:h-80{
+    height: 20rem;
   }
+}
 
-  .xl\:my-36{
-    margin-top: 9rem;
-    margin-bottom: 9rem;
+@media (min-width: 1536px){
+  .\32xl\:h-96{
+    height: 24rem;
   }
 }
