--- a/public/styles.css
+++ b/public/styles.css
@@ -549,8 +549,16 @@ video {
   left: -1.5rem;
 }
 
+.-left-9{
+  left: -2.25rem;
+}
+
 .-right-6{
   right: -1.5rem;
+}
+
+.-right-9{
+  right: -2.25rem;
 }
 
 .-top-6{
@@ -569,6 +577,10 @@ video {
   z-index: 50;
 }
 
+.m-auto{
+  margin: auto;
+}
+
 .my-10{
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -584,12 +596,20 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.block{
+  display: block;
+}
+
 .flex{
   display: flex;
 }
 
 .grid{
   display: grid;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-20{
@@ -634,8 +654,8 @@ video {
   border-radius: 1.5rem;
 }
 
-.rounded-full{
-  border-radius: 9999px;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-xl{
@@ -775,10 +795,6 @@ video {
   opacity: 0.3;
 }
 
-.opacity-50{
-  opacity: 0.5;
-}
-
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -816,9 +832,36 @@ a:hover{
   font-weight: 700;
 }
 
+/* Fading animation */
+
+.fade {
+  animation-name: fade;
+  animation-duration: 2s;
+  animation-timing-function: ease;
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
 .hover\:bg-neutral-200:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-50:hover{
+  --tw-bg-opacity: 0.5;
 }
 
 .hover\:font-bold:hover{
@@ -833,10 +876,6 @@ a:hover{
 .hover\:text-blue-600:hover{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.hover\:opacity-100:hover{
-  opacity: 1;
 }
 
 .hover\:shadow-xl:hover{
