--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,15 @@
 a {
     @apply text-blue-500 hover:font-bold
 }
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+  }
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
