--- a/public/styles.css
+++ b/public/styles.css
@@ -577,8 +577,32 @@ video {
   top: 0px;
 }
 
+.-right-7{
+  right: -1.75rem;
+}
+
+.-right-5{
+  right: -1.25rem;
+}
+
+.-left-5{
+  left: -1.25rem;
+}
+
+.-left-7{
+  left: -1.75rem;
+}
+
 .z-50{
   z-index: 50;
+}
+
+.z-20{
+  z-index: 20;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .float-right{
@@ -731,6 +755,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -739,6 +767,26 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pt-10{
