--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Fasthand&family=Great+Vibes&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&family=Tangerine:wght@400;700&display=swap');
 
 /*
 ! tailwindcss v3.3.2 | MIT License | https://tailwindcss.com
@@ -549,16 +549,16 @@ video {
   left: -1.5rem;
 }
 
-.-left-9{
-  left: -2.25rem;
+.-left-7{
+  left: -1.75rem;
 }
 
 .-right-6{
   right: -1.5rem;
 }
 
-.-right-9{
-  right: -2.25rem;
+.-right-7{
+  right: -1.75rem;
 }
 
 .-top-6{
@@ -569,57 +569,20 @@ video {
   bottom: 0px;
 }
 
-.bottom-1\/2{
-  bottom: 50%;
-}
-
 .top-0{
   top: 0px;
-}
-
-.-right-7{
-  right: -1.75rem;
-}
-
-.-right-5{
-  right: -1.25rem;
-}
-
-.-left-5{
-  left: -1.25rem;
-}
-
-.-left-7{
-  left: -1.75rem;
-}
-
-.z-50{
-  z-index: 50;
 }
 
 .z-20{
   z-index: 20;
 }
 
-.z-10{
-  z-index: 10;
-}
-
-.float-right{
-  float: right;
-}
-
-.float-left{
-  float: left;
+.z-50{
+  z-index: 50;
 }
 
 .m-auto{
   margin: auto;
-}
-
-.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }
 
 .my-3{
@@ -627,14 +590,9 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.my-5{
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
+.my-7{
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .block{
@@ -695,6 +653,10 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -708,12 +670,21 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-b{
+  border-bottom-width: 1px;
+}
+
 .border-b-2{
   border-bottom-width: 2px;
 }
 
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-red-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
 .bg-neutral-100{
@@ -755,8 +726,9 @@ video {
   padding: 1.5rem;
 }
 
-.p-1{
-  padding: 0.25rem;
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-3{
@@ -764,24 +736,14 @@ video {
   padding-right: 0.75rem;
 }
 
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .py-4{
@@ -805,12 +767,12 @@ video {
   font-family: Dancing Script;
 }
 
-.font-indie{
-  font-family: Indie Flower;
-}
-
 .font-merrie{
   font-family: Merriweather;
+}
+
+.font-tangerine{
+  font-family: Tangerine;
 }
 
 .text-3xl{
@@ -842,13 +804,14 @@ video {
   font-weight: 700;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .text-blue-300{
   --tw-text-opacity: 1;
   color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-red-600{
@@ -870,6 +833,12 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all{
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -923,9 +892,9 @@ a:hover{
   cursor: pointer;
 }
 
-.hover\:bg-gray-500:hover{
+.hover\:bg-black:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-neutral-200:hover{
@@ -933,34 +902,8 @@ a:hover{
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-black:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-opacity-50:hover{
-  --tw-bg-opacity: 0.5;
-}
-
-.hover\:bg-opacity-30:hover{
-  --tw-bg-opacity: 0.3;
-}
-
-.hover\:bg-opacity-10:hover{
-  --tw-bg-opacity: 0.1;
-}
-
 .hover\:bg-opacity-20:hover{
   --tw-bg-opacity: 0.2;
-}
-
-.hover\:font-bold:hover{
-  font-weight: 700;
 }
 
 .hover\:text-blue-500:hover{
@@ -978,8 +921,10 @@ a:hover{
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.hover\:opacity-50:hover{
-  opacity: 0.5;
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:shadow-xl:hover{
