--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Fasthand&family=Great+Vibes&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&family=Tangerine:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&family=Tangerine&display=swap');
 
 /*
 ! tailwindcss v3.3.2 | MIT License | https://tailwindcss.com
@@ -549,16 +549,8 @@ video {
   left: -1.5rem;
 }
 
-.-left-7{
-  left: -1.75rem;
-}
-
 .-right-6{
   right: -1.5rem;
-}
-
-.-right-7{
-  right: -1.75rem;
 }
 
 .-top-6{
@@ -573,21 +565,13 @@ video {
   top: 0px;
 }
 
-.z-20{
-  z-index: 20;
-}
-
 .z-50{
   z-index: 50;
 }
 
-.m-auto{
-  margin: auto;
-}
-
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-7{
@@ -595,28 +579,32 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.block{
-  display: block;
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .flex{
   display: flex;
 }
 
-.grid{
-  display: grid;
-}
-
-.hidden{
-  display: none;
-}
-
 .h-20{
   height: 5rem;
 }
 
-.h-52{
-  height: 13rem;
+.h-auto{
+  height: auto;
+}
+
+.w-full{
+  width: 100%;
 }
 
 @keyframes pulse{
@@ -627,10 +615,6 @@ video {
 
 .animate-pulse{
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-.grid-cols-1{
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .items-center{
@@ -665,21 +649,8 @@ video {
   border-radius: 0.75rem;
 }
 
-.border-y-2{
-  border-top-width: 2px;
-  border-bottom-width: 2px;
-}
-
 .border-b{
   border-bottom-width: 1px;
-}
-
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
-.border-t-2{
-  border-top-width: 2px;
 }
 
 .border-red-600{
@@ -714,26 +685,8 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-3{
-  padding: 0.75rem;
-}
-
 .p-6{
   padding: 1.5rem;
-}
-
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .px-5{
@@ -746,27 +699,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.text-center{
-  text-align: center;
-}
-
-.align-middle{
-  vertical-align: middle;
-}
-
-.font-dancing{
-  font-family: Dancing Script;
-}
-
 .font-merrie{
   font-family: Merriweather;
 }
@@ -775,19 +707,14 @@ video {
   font-family: Tangerine;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-xl{
@@ -809,14 +736,14 @@ video {
   color: rgb(147 197 253 / var(--tw-text-opacity));
 }
 
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .opacity-30{
@@ -827,14 +754,6 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all{
@@ -861,6 +780,8 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Apply custom fonts to specific classes */
+
 a{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -878,6 +799,11 @@ a:hover{
   animation-timing-function: ease;
 }
 
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
 @keyframes fade {
   from {
     opacity: .4
@@ -888,22 +814,28 @@ a:hover{
   }
 }
 
-.hover\:cursor-pointer:hover{
-  cursor: pointer;
+/* Apply rounded corners and set initial transition properties */
+
+#slideshow {
+  max-width: 100%;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  border-radius: 1rem;
+  /* Adjust the value to control the roundness */
+  transition: opacity 0.5s;
+  /* Add transition property for smooth cross-fade effect */
 }
 
-.hover\:bg-black:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+/* Set initial opacity to 1 (fully visible) */
+
+#slideshow {
+  opacity: 1;
 }
 
 .hover\:bg-neutral-200:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-opacity-20:hover{
-  --tw-bg-opacity: 0.2;
 }
 
 .hover\:text-blue-500:hover{
@@ -916,11 +848,6 @@ a:hover{
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.hover\:text-red-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
 .hover\:shadow-lg:hover{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -931,42 +858,4 @@ a:hover{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-@media (min-width: 768px){
-  .md\:h-64{
-    height: 16rem;
-  }
-}
-
-@media (min-width: 1024px){
-  .lg\:h-72{
-    height: 18rem;
-  }
-
-  .lg\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:border-x-2{
-    border-left-width: 2px;
-    border-right-width: 2px;
-  }
-
-  .lg\:border-y-0{
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-  }
-}
-
-@media (min-width: 1280px){
-  .xl\:h-80{
-    height: 20rem;
-  }
-}
-
-@media (min-width: 1536px){
-  .\32xl\:h-96{
-    height: 24rem;
-  }
 }
