--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&family=Kaushan+Script&family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&family=Source+Code+Pro:ital@0;1&family=Tangerine&display=swap');
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+/* Apply custom fonts to specific classes */
 
 a {
     @apply text-blue-500 hover:font-bold
@@ -14,8 +16,28 @@ a {
     animation-duration: 2s;
     animation-timing-function: ease;
   }
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
   
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
   }
+
+/* Apply rounded corners and set initial transition properties */
+#slideshow {
+  max-width: 100%;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  border-radius: 1rem; /* Adjust the value to control the roundness */
+  transition: opacity 0.5s; /* Add transition property for smooth cross-fade effect */
+}
+
+/* Set initial opacity to 1 (fully visible) */
+#slideshow {
+  opacity: 1;
+}
